--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: WP Meta Optimizer
 description: WP Meta Optimizer a plugin that helps your website load faster if you use more meta like Post/Comment/User/Term metas!
+show_downloads: true
+google_analytics: 
