--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "wp-meta-optimizer",
-    "description": "WP Meta Optimizer",
+    "description": "Meta Optimizer",
     "version": "1.0.0",
     "homepage": "https://parsa.ws",
     "author": "Parsa Kafi (https://parsa.ws)",
